--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "/anaconda3/bin/python",
+    "python.pythonPath": "/Users/toddjacobus/.local/share/virtualenvs/gdelt_backend-3mRuTprG/bin/python",
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true
 }
